--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "vue-server-renderer": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "babel-loader": "^8.0.6",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "webpack": "^4.42.0",
