gitignore build files, setup browser sync, setup build script, move affdex js into js/affdex/

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 node_modules/
+.ipynb_checkpoints/
+
+# data files
 !python/data/example.txt
 python/data/*.txt
-.ipynb_checkpoints/
+
+# webpack js build
+public/js/build/
