--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "babel-loader": "^8.0.6",
+    "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "dev": "npm-run-all --parallel watch:server watch:build",
-    "start": "node ./app.js",
+    "start": "npm-run-all --parallel watch:server watch:build",
+	"dev": "npm start",
     "watch:build": "webpack --watch",
-    "watch:server": "nodemon ./app.js localhost 8000",
+    "watch:server": "nodemon ./app.js",
+	"build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
